[package]
name = "dbevent_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.4.0", features = ["json"] }
reqwest = { version = "0.11.9", features = ["json"], optional = true }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
url = "2.2.2"
mysql = "22.1.0"


[features] 
async = [
    "reqwest"
]